K8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: node
  labels:
    app: node-app
