K8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: node-app
  namespace: node

spec:
  replicas: 2

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app: node-app

  template:

    metadata:
      labels:
        app: node-app

    spec:
      containers:

      - name: node-app

        image: $IMAGE_NAME:$TAG

        ports:
        - containerPort: 3000

        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5

        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
