K8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: node-service
  namespace: node

spec:
  type: ClusterIP

  selector:
    app: node-app

  ports:
    - port: 80
      targetPort: 3000
