K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: node-ingress
  namespace: node

spec:
  ingressClassName: nginx

  rules:
  - host: node.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: node-service
            port:
              number: 80
